--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <p class="mb-5">Press the button below to recieve a random quote!</p>
 
                 <div>
-                    <button class="btn btn-outline-danger displayBtn" onclick="displayQuote();">New Quote</button>
+                    <button class="btn btn-outline-info displayBtn" onclick="displayQuote();">New Quote</button>
                 </div>
 
 
